--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pytest-cov = "*"
 flask = "*"
 flask-restplus = "*"
 flask-migrate = "*"
+gunicorn = "*"
 python-dotenv = "*"
 flask-sqlalchemy = "*"
 psycopg2-binary = "*"
