--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ flask = "*"
 flask-restplus = "*"
 flask-migrate = "*"
 gunicorn = "*"
+Werkzeug = "*"
 python-dotenv = "*"
 flask-sqlalchemy = "*"
 psycopg2-binary = "*"
