--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ flask = "*"
 flask-restplus = "*"
 flask-migrate = "*"
 gunicorn = "*"
-Werkzeug = "*"
+Werkzeug = "==0.16.1"
 python-dotenv = "*"
 flask-sqlalchemy = "*"
 psycopg2-binary = "*"
